@@ -44,13 +44,21 @@
  */
 
 /* sendq: where outgoing packet payload is stored */
+#ifdef OMX_SHARED_RING_ENTRY_NR
+#define OMX_SENDQ_ENTRY_NR	OMX_SHARED_RING_ENTRY_NR
+#else
 #define OMX_SENDQ_ENTRY_NR	1024UL
+#endif
 #define OMX_SENDQ_ENTRY_SHIFT	OMX_MEDIUM_FRAG_LENGTH_ROUNDUPSHIFT
 #define OMX_SENDQ_ENTRY_SIZE	(1UL << OMX_SENDQ_ENTRY_SHIFT)
 #define OMX_SENDQ_SIZE		(OMX_SENDQ_ENTRY_NR << OMX_SENDQ_ENTRY_SHIFT)
 
 /* recvq: where received packet payload is stored */
+#ifdef OMX_SHARED_RING_ENTRY_NR 
+#define OMX_RECVQ_ENTRY_NR	OMX_SHARED_RING_ENTRY_NR
+#else
 #define OMX_RECVQ_ENTRY_NR	1024UL
+#endif
 #define OMX_RECVQ_ENTRY_SHIFT	OMX_MEDIUM_FRAG_LENGTH_ROUNDUPSHIFT
 #define OMX_RECVQ_ENTRY_SIZE	(1UL << OMX_RECVQ_ENTRY_SHIFT)
 #define OMX_RECVQ_SIZE		(OMX_RECVQ_ENTRY_NR << OMX_RECVQ_ENTRY_SHIFT)
@@ -59,8 +67,13 @@
 /* unexpected eventq: where unexpected events are stored, incoming packets */
 #define OMX_EVENTQ_ENTRY_SHIFT	6
 #define OMX_EVENTQ_ENTRY_SIZE	(1UL << OMX_EVENTQ_ENTRY_SHIFT)
-#define OMX_EXP_EVENTQ_ENTRY_NR	1024
-#define OMX_UNEXP_EVENTQ_ENTRY_NR	1024
+#ifdef OMX_SHARED_RING_ENTRY_NR
+#define OMX_EXP_EVENTQ_ENTRY_NR		OMX_SHARED_RING_ENTRY_NR
+#define OMX_UNEXP_EVENTQ_ENTRY_NR	OMX_SHARED_RING_ENTRY_NR
+#else
+#define OMX_EXP_EVENTQ_ENTRY_NR		1024UL
+#define OMX_UNEXP_EVENTQ_ENTRY_NR	1024UL
+#endif
 #define OMX_EXP_EVENTQ_SIZE		(OMX_EVENTQ_ENTRY_SIZE * OMX_EXP_EVENTQ_ENTRY_NR)
 #define OMX_UNEXP_EVENTQ_SIZE		(OMX_EVENTQ_ENTRY_SIZE * OMX_UNEXP_EVENTQ_ENTRY_NR)
 
